--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.2.7"
   },
-  "dependencies": {},
+  "dependencies": {
+    "browser-sync": "^2.27.5",
+    "typescript": "^4.3.5"
+  },
   "scripts": {
+    "gulp": "gulp",
     "dev": "TAILWIND_MODE=watch postcss build src/style.css -o dist/style.css -w",
     "build": "postcss build src/style.css -o dist/style.css NODE_ENV=production"
   }
