--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "tailwindcss": "^2.2.7"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "browser-sync": "^2.27.5",
     "typescript": "^4.3.5"
   },
