--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.2.7"
+    "tailwindcss": "^2.2.7",
+    "ts-loader": "^9.2.5",
+    "webpack": "^5.51.1",
+    "webpack-stream": "^6.1.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
