--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "scripts": {
     "gulp": "gulp",
     "dev": "TAILWIND_MODE=watch postcss build src/style.css -o public/style.css -w",
-    "build": "postcss build src/style.css -o public/style.css NODE_ENV=production build --output public"
+    "build": "postcss build src/style.css -o public/style.css NODE_ENV=production"
   }
 }
